# CMake-Vcpkg-Automated-Example

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  bac.yaml  vcpkg.json
.github/workflows/: build-test-deploy.yml  build-test-release.yml  build-test.yml  release.yml
Documentation/doc_automation_ci_cd/: doc_automation_ci_cd.md
src/: main.cpp
